# nvtx-vscode

./: .gitignore  README.md  package-lock.json  package.json
py/: README.md  pyproject.toml
py/src/njkt/: __init__.py  lib.py  runner.py
src/: extension.ts
src/services/: NvtxDecorationManager.ts  NvtxRangeManager.ts
src/views/: NvtxTreeView.ts
